Revision history for {{$dist->name}}

{{$NEXT}}
  - Drop AnyEvent::WebSocket::Client on < 5.10
  - Drop Validate::Tiny on < 5.10
  - Drop Yars::Command::yars_exercise on < 5.10.1

1.79      2015-12-13 05:14:44 -0500
  - Updated my dists to latest
  - Added Test::Exec

1.78      2015-12-11 13:57:25 -0500
  - Updated my dists to latest

1.77      2015-12-09 20:39:07 -0500
  - Updated my dists to latest

1.76      2015-12-07 11:15:47 -0500
  - Tweak mod_perl exclusions

1.75      2015-12-07 09:27:58 -0500
  - Exclusion for windows: Rose::DB, Rose::DB::Object, Term::EditLine, 
    Alien::Libbz2

1.74      2015-12-07 09:20:00 -0500
  - Add some MSWin32 exclusions
  - Updated my dists to latest

1.73      2015-11-20 17:47:27 -0500
  - Remove Scalar::Does
  - Updated my dists to latest

1.72      2015-11-06 08:37:50 -0500
  - Added PlugAuth::Client::Tiny::Apache2AuthenHandler
  - Added Yars::Command::yars_exercise
  - Updated my dists to latest

1.71      2015-10-16 09:52:07 -0400
  - Updated my dists to latest

1.70      2015-09-17 06:47:31 -0400
  - Updated my dists to latest

1.69      2015-09-10 21:17:50 -0400
  - Updated my dists to latest
  - Added Alien.pm

1.68      2015-09-03 08:15:19 -0400
  - Updated my dists to latest
  - Added Alien::CMake

1.67      2015-07-27 11:22:33 -0400
  - Updated my dists to latest
  - Remove Dist::Zilla::PluginBunlde::ACPS
  - Added Alien::Libbz2
  - Added Alien::hunspell

1.66      2015-06-11 14:25:57 -0600
  - Updated my dists to latest

1.65      2015-06-11 11:28:34 -0600
  - Added some filters for older Perls, where some of the dists
    are not supported

1.64      2015-06-10 16:26:54 -0600
  - Only install Phorography::DX on Perl 5.22

1.63      2015-06-10 16:20:40 -0600
  - Added Photography::DX
  - Updated my dists to latest

1.62      2015-05-29 13:19:56 -0400
  - Remove Dist::Zilla::MintingProfile::Clustericious
  - Updated my dists to latest

1.61      2015-05-15 08:44:56 -0400
  - Updated my dists to latest
