@@ -32,6 +32,7 @@ Alien::Hunspell                                = 0.02
 Alien::Libarchive                              = 0.26
 Alien::Libarchive::Installer                   = 0.12
 Alien::Libbz2                                  = 0.02
+Alien::libtool24                               = 0.03
 Alien::LibYAML                                 = 0.1.5
 Alien::m4                                      = 0.06
 Alien::MSYS                                    = 0.07
@@ -45,7 +46,7 @@ AnyEvent::FTP                                  = 0.09
 AnyEvent::Git::Wrapper                         = 0.09
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.84
-AnyEvent::WebSocket::Client                    = 0.31
+AnyEvent::WebSocket::Client                    = 0.32
 App::cpangitify                                = 0.12
 App::pwhich                                    = 1.14
 App::palien                                    = 0.02
@@ -55,10 +56,10 @@ App::which_package                             = 0.05
 Archive::Ar::Libarchive                        = 2.05
 Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0900
-Archive::Libarchive::XS                        = 0.0900
+Archive::Libarchive::XS                        = 0.0901
 Authen::Simple::PlugAuth                       = 0.02
-Clustericious                                  = 1.11
-Clustericious::Admin                           = 1.05
+Clustericious                                  = 1.12
+Clustericious::Admin                           = 1.06
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::InsertExample             = 0.04
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
@@ -68,7 +69,7 @@ Dist::Zilla::Plugin::OurPkgVersion             = 0.06
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.05
 Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::PluginBundle::Author::Plicease    = 1.93
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.94
 FFI                                            = 1.09
 FFI::CheckLib                                  = 0.14
 FFI::ExtractSymbols                            = 0.03
@@ -102,10 +103,11 @@ PlugAuth::Plugin::LDAP                         = 0.07
 Shell::Config::Generate                        = 0.24
 Shell::Guess                                   = 0.06
 String::Template                               = 0.19
-Term::EditLine                                 = 0.08
-Test::CChecker                                 = 0.06
+Term::EditLine                                 = 0.09
+Test::Alien                                    = 0.02
+Test::CChecker                                 = 0.07
 Test::Clustericious::Cluster                   = 0.28
-Test::Exec                                     = 0.01
+Test::Exec                                     = 0.02
 Test::Fixme                                    = 0.15
 Test::Script                                   = 1.10
 Test::Version                                  = 2.03
@@ -117,7 +119,7 @@ Win32::Getppid                                 = 0.02
 Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.02
 Win32API::ProcessStatus                        = 0.05
-WWW::Bugzilla::BugTree                         = 0.06
+WWW::Bugzilla::BugTree                         = 0.07
 Yars                                           = 1.21
 Yars::Command::yars_exercise                   = 0.03
 
